// Command to generate grpc  
// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative .\thing.proto

syntax = "proto3";

package things;

option go_package = "github.com/pseudoincorrect/Bariot/pkg/things/grpc/things";

service Things {
  rpc GetUserOfThing(GetUserOfThingRequest) returns (GetUserOfThingResponse) {}
}

message GetUserOfThingRequest {
  string thingId = 1;
}

message GetUserOfThingResponse {
  string UserId = 1;
}